quatres pages finis sans responsives

--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -33,6 +33,7 @@ footer{
             .most-recent-deux{
                 display: flex;
                 gap: 2em;
+                margin-bottom: 15px;
                 
                 .blog-content{
                     a{
