--- a/css/style.scss
+++ b/css/style.scss
@@ -13,3 +13,7 @@
 
 
 @import 'pages/home';
+@import 'pages/about';
+@import 'pages/category';
+@import 'pages/latestnews';
+@import 'pages/contact';
