--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -1,8 +1,18 @@
 footer{
     padding: 100px;
     background: black;
+    @media screen and (max-width:500px){
+        padding-top: 30px;
+        padding-left: 20px;
+        margin-top: 25%;
+    }
    
     .trois-parties{
+        @media screen and (max-width:500px) {
+            flex-direction: column;
+           align-items: flex-start;
+           width: 200%;
+        }
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -54,7 +64,14 @@ footer{
                
               
             }
+            
            
+        }
+        .travel img{
+            @media screen and (max-width:500px){
+                width: 150%;
+            }
+
         }
     }
 }
