--- a/css/pages/_about.scss
+++ b/css/pages/_about.scss
@@ -75,29 +75,51 @@
             p{
                 color: #ff2143;
                 margin-left: 5%;
+                @media screen and (max-width:500px){
+                   display: none;
+                   
+                }
             }
             h1{
                 font-size: 45px;
                 margin-bottom: 5%;
+                @media screen and (max-width:500px){
+                    margin-left: 20px;
+                   
+                }
             }
         }
         .team-mambers{
             display: flex;
         flex-direction: row;
         gap: 2em;
+        @media screen and (max-width:500px){
+            flex-direction: column;
+        }
         }
         .bloc-team{
             position: relative;
+            @media screen and (max-width:500px){
+                margin-top: 10%;
+                margin-left: 5%;
+            }
             .bloc-team-content{
                 position: absolute;
                 bottom: -20%;
                 right: 0;
                 background: white;
-             width: 100%;
-             padding-left: 5%;
+               width: 100%;
+              padding-left: 5%;
+              @media screen and (max-width:500px){
+                margin-left: 0;  
+            }
              p{
                 margin-left: 10%;
                 color: #ff2143;
+                @media screen and (max-width:500px){
+                    margin-left: 0;
+                   
+                }
              }
             }
         }
