--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -15,6 +15,11 @@ header{
             display: flex;
             align-items: center;
             color: #cdcfd8;
+            @media screen and(max-width:900px){
+                margin-left: 40px;
+               
+
+            }
             
             .icon-energie{
                 display: flex;
@@ -38,6 +43,12 @@ header{
                 display: flex;
                 flex-direction: row;
             gap: 31em;
+            div p{
+                @media screen and(max-width:900px){
+                    display: none;
+                }
+            }
+           
             
              
             }
@@ -85,10 +96,35 @@ header{
         }
         
     }
+    .nav-survol{
+        display: none;
+        @media screen and(max-width:500px){
+            .nav-survol{  
+                display: block;   
+                position: fixed;     
+                top:0;     
+                left: 0;             
+                bottom: -100%;     
+                z-index: 80;     
+                background: #000;     
+                width: 100%;     
+                height: 100%;     
+                text-align: center; }
+             .nav-survol nav:first-child{          
+                padding-top: 300px;     
+                width: 60vw;     
+                margin: 0 Auto; } 
+                .nav-survol nav:first-child a{     
+                    display: inline-block;     
+                    font-size: 7vw;     
+                    margin:3vw; }  
+    
+        }
+        body.isActive .nav-survol{
+            transform: translateX(0); 
+       } 
+    }
     .nav{
-        @media screen and(max-width:500px) {
-             
-             }
         display: flex;
     flex-wrap: wrap;
     gap: 28%;
@@ -96,11 +132,52 @@ header{
         height: 8vh;
         color: #fff;
         background: #ff2143;
-        .menu-nav{
-            @media screen and(max-width:500px) {
+        
+        .menu-respo{
             display: none;
+             @media screen and(max-width:500px) {
+           display: block;
+           margin-left: 20px;
+           /*burger-menu*/
+ .burger-menu {
+    width: 30px;
+    height: 40px;
+   position:absolute;
+    top:12%;
+    right:2%;
+    z-index: 2;
+    cursor:pointer;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+  .burger-menu div {
+    width: 100%;
+    height: 3px;
+    background:white;
+    opacity:0.8;
+    position: absolute;
+    left:50%;
+    transform:translate(-50%,-50%);
+  }
+  .top {
+    top:35%;
+  }
+  .middle {
+    top:50%;
+  }
+  .bottom{
+    top:65%;
+  }
             }
+
+        }
+        .menu-nav{
              a{
+                 @media screen and(max-width:500px) {
+                 display: none;
+                  border-right: 0;
+            }
                 color: #fff;
                 text-decoration: none;
                 border-right: 1px solid #fff;
@@ -108,7 +185,6 @@ header{
                 padding-right: 20px;
                 padding-left: 20px;
                 font-weight: bold;
-
             }
             
             a:nth-of-type(1){
