--- a/css/pages/_about.scss
+++ b/css/pages/_about.scss
@@ -1,8 +1,22 @@
 .our-mission{
    padding: 80px;
+   @media screen and (max-width:500px){
+    width: 500px;
+    padding: 0;
+   
+    
+   }
+  
    .our-content{
+    @media screen and (max-width:500px){
+        margin-left: 25px;
+        
+       }
     h1{
+        margin-top: 50px;
         margin-left: 10%;
+       
+       
     }
     width: 80%;
     line-height: 30px;
@@ -18,21 +32,45 @@
     background: url(../img/gallery/section_bg02.jpg) center/cover;
     margin-top: 7%;
     height: 85vh;
+    @media screen and (max-width:500px){
+       background: #ff2143;
+       width: 500px;
+       height: 130vh;
+       
+      }
     .bloc-best-service{
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
         gap: 4em;
+        @media screen and (max-width:500px){
+           flex-direction: column;
+           height: 90vh;
+           width: 400px;
+          }
         .best-service-content{
             margin-top: 10%;
+            img{
+                @media screen and (max-width:500px){
+                    margin-top: 50%;
+                    width: 390px;
+                  }
+            }
         }
         .noir-text{
             margin-top: 8%;
              color: white;
+             @media screen and (max-width:500px){
+               margin: 0;
+              }
             span{
                 color: #ff2143;
                 margin-left: 15%;
+                @media screen and (max-width:500px){
+                   color: white;
+                  }
+               
             }
             h1{
                 font-size: 40px;
@@ -45,6 +83,9 @@
             }
             p:nth-of-type(2){
                  margin-bottom: 10%;
+                 @media screen and (max-width:500px){
+                    margin-bottom: 20%;
+                  }
             }
            
            
@@ -52,6 +93,11 @@
             color: white;
             background: #ff2143;
             font-weight:bold;
+            @media screen and (max-width:500px){
+                background: black;
+                color: #ff2143;
+                padding: 20px 40px;
+              }
            }
             
                
@@ -84,7 +130,8 @@
                 font-size: 45px;
                 margin-bottom: 5%;
                 @media screen and (max-width:500px){
-                    margin-left: 20px;
+                    margin-left: 60px;
+                    font-size: 20px;
                    
                 }
             }
@@ -100,8 +147,13 @@
         .bloc-team{
             position: relative;
             @media screen and (max-width:500px){
-                margin-top: 10%;
-                margin-left: 5%;
+                margin-top: 20px;
+                margin-left: 2%;
+            }
+            img{
+                @media screen and (max-width:500px){
+                   width: 418px;
+                  }
             }
             .bloc-team-content{
                 position: absolute;
@@ -111,7 +163,10 @@
                width: 100%;
               padding-left: 5%;
               @media screen and (max-width:500px){
-                margin-left: 0;  
+                margin-left: 0; 
+                bottom: 0; 
+              width:420px;
+              right: 64.5%;
             }
              p{
                 margin-left: 10%;
