--- a/css/pages/_contact.scss
+++ b/css/pages/_contact.scss
@@ -3,6 +3,9 @@ iframe{
     height: 480px;
     margin-top: 10%;
     margin-bottom: 10%;
+    @media screen and (max-width:500px){
+        display: none;
+    }
 }
 .get-in-touch{
     height: 65vh;
@@ -12,12 +15,23 @@ iframe{
     align-items: center;
     gap: 3em;
     margin-bottom: 8%;
+    @media screen and (max-width:500px){
+       margin-left: 25px;
+       flex-direction: column;
+       height: 90vh;
+       align-items: flex-start;
+       margin-bottom: 10%;
+       margin-top: 5%;
+    }
     .formulaire{
         textarea{
             font-size: 15px;
             border: 1px solid rgba(0, 0, 0, 0.192);
             margin-bottom: 30px;
             padding-left: 10px;
+            @media screen and (max-width:500px){
+                width: 440px;
+            }
         }
       width: 70%;  
       .name-email{
@@ -25,12 +39,18 @@ iframe{
         display: flex;
         flex-direction: row;
         gap: 2em;
+        @media screen and (max-width:500px){
+            flex-direction: column;
+        }
             input{
                 border: 1px solid rgba(0, 0, 0, 0.192);
                 width: 50%;
                 padding: 11px;
                 font-size: 15px;
                 color: rgba(169, 169, 169, 0.075);
+                @media screen and (max-width:500px){
+                    width: 440px;
+                }
                 
           
            
@@ -49,6 +69,9 @@ iframe{
             margin-bottom: 10%;
             font-size: 15px;
             color: rgba(169, 169, 169, 0.075);
+            @media screen and (max-width:500px){
+                width: 440px;
+            }
         }
         .withe-btn{
             text-align: center;
@@ -70,10 +93,15 @@ iframe{
         align-items: flex-start;
         gap: 2em;
         width: 30%;
+        @media screen and (max-width:500px){
+        margin-left: 15px;
+     
+        }
         a {
             color: gray;
         }
         .contact{
+            
             .adress{
                 margin-bottom: 20px;
                 display: flex;
