--- a/css/pages/_latestnews.scss
+++ b/css/pages/_latestnews.scss
@@ -3,14 +3,35 @@
     display: flex;
     flex-direction: row;
     gap: 1em;
+    @media screen and (max-width:500px){
+        flex-direction: column;
+    }
+
     .music-events img{
         width: 270px;
+            @media screen and (max-width:500px){
+                display: none;
+        }
     }
     .last-new-content{
         width: 800px;
+        @media screen and (max-width:500px){
+            margin-left: 30px;
+        }
+        img{
+            @media screen and (max-width:500px){
+                width: 440px;
+                height: 241px;
+                border-radius: 7px;
+            }
+        }
         h1{
             margin-top: 30px;
             margin-bottom: 20px;
+            @media screen and (max-width:500px){
+                width: 440px;
+                font-size: 25px;
+            }
         }
         p{
             line-height: 30px;
@@ -18,6 +39,9 @@
             color: #506172;
             font-size: 15px;
             margin-bottom: 30px;
+            @media screen and (max-width:500px){
+                width: 440px;
+            }
         }
     }
 }
@@ -26,7 +50,10 @@
     display: flex;
     align-items: center;
     gap: 1em;
-
+    
+    @media screen and (max-width:500px){
+        margin-left: 20px;
+    }
         p{
             font-size: 35px;
             font-weight: bold;
