--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -11,8 +11,15 @@ footer{
         @media screen and (max-width:500px) {
             flex-direction: column;
            align-items: flex-start;
-           width: 200%;
+           width: 300%;
         }
+
+        @media screen and  (min-width: 500px) and (max-width: 900px) {
+         display: grid;
+         grid-template-columns: repeat(2,1fr);
+         width: 850px;
+             
+             }
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -23,6 +30,10 @@ footer{
             flex-direction: column;
             gap: 1em;
             color: white;
+            @media screen and (min-width: 500px) and (max-width: 900px) {
+                width: 90%;
+                    
+                    }
             div{
                 width: 75%;
                 padding: 0;
@@ -34,6 +45,21 @@ footer{
         .popular-post{
             width: 45%;
             margin-right: 30px;
+            @media screen and (min-width: 500px) and (max-width: 900px) {
+                width: 60%;
+                    
+                    }
+                    @media screen and (min-width: 500px) and (max-width: 900px) {
+                grid-area: 1/2;
+              
+                 
+                 }
+                 img{
+                    @media screen and (min-width: 500px) and (max-width: 900px){
+                        width: 86px;
+                        height:80px ;
+                    }
+                 }
             p{
                 color: white;
               }
@@ -44,19 +70,38 @@ footer{
                 display: flex;
                 gap: 2em;
                 margin-bottom: 15px;
+                @media screen and (min-width: 500px) and (max-width: 900px) {
+                  
+                     
+                     }
                 
                 .blog-content{
+                    @media screen and (min-width: 500px) and (max-width: 900px){
+                       width: 60%;
+                    }
+                    p{
+                        @media screen and(max-width:900px){
+                          font-size: 15px;
+                          padding: 0;
+                          margin: 0;
+                          
+                        }
+                    }
                     a{
                         text-decoration: none;
                     }
                     p:nth-of-type(2){
                         font-size: 15px;
-                        color:rgba(255, 255, 255, 0.315)
+                        color:rgba(255, 255, 255, 0.315);
+                        
     
                     }
                     span{
-                        color:rgba(255, 255, 255, 0.315)
-
+                        color:rgba(255, 255, 255, 0.315);
+                        @media screen and (min-width: 500px) and (max-width: 900px){
+                            font-size: 10px;
+                            
+                          }
                     }
 
                 }
@@ -69,7 +114,8 @@ footer{
         }
         .travel img{
             @media screen and (max-width:500px){
-                width: 150%;
+                width: 100%;
+                
             }
 
         }
