--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -15,7 +15,7 @@ header{
             display: flex;
             align-items: center;
             color: #cdcfd8;
-            @media screen and(max-width:900px){
+            @media screen and (min-width: 500px) and (max-width: 900px){
                 margin-left: 40px;
                
 
@@ -44,7 +44,7 @@ header{
                 flex-direction: row;
             gap: 31em;
             div p{
-                @media screen and(max-width:900px){
+                @media screen and (min-width: 500px) and (max-width: 900px){
                     display: none;
                 }
             }
@@ -77,9 +77,30 @@ header{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            width: 750px;
+            
+        }
+        a:nth-of-type(1){
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                margin-left: 10%;
+            }
+        }
+        a:nth-of-type(2){
+            img{
+                @media screen and (min-width: 500px) and (max-width: 900px){
+                    margin-left: 20px;
+                    width: 410px;
+                 }
+
+            }
+            
+        }
+
         a:nth-of-type(2) img{
             width: 90%;
             @media screen and (max-width:500px){
+                margin: 0;
                 width: 60%;
             }
         }
@@ -132,6 +153,10 @@ header{
         height: 8vh;
         color: #fff;
         background: #ff2143;
+        @media screen and(max-width:900px) {
+           justify-content: center;
+             
+             }
         
         .menu-respo{
             display: none;
@@ -199,6 +224,11 @@ header{
                 display: none;
                  
                  }
+                 @media screen and(max-width:950px) {
+                    display: none;
+                     
+                     }
+
             .quatres{
                 width: 100%;
             }
