--- a/css/pages/_category.scss
+++ b/css/pages/_category.scss
@@ -7,8 +7,15 @@
     @media screen and (max-width:500px){
         flex-direction: column;
     }
+    @media screen and (min-width: 500px) and (max-width: 900px){
+        flex-direction: column;
+        width: 690px;
+    }
     .music-events{
         @media screen and (max-width:500px){
+            display: none;
+        }
+        @media screen and (min-width: 500px) and (max-width: 900px){
             display: none;
         }
     }
@@ -20,6 +27,10 @@
             width: 450px;
             margin-left: 20px;
         }
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            margin-left: 60px;
+        }
+        
         .title-menu{
             width: 100%;
             margin: 0 auto;
@@ -29,6 +40,15 @@
             margin-bottom: 30px;
             margin-top: 30px;
             @media screen and (max-width:500px){
+                flex-direction: column;
+                width: 450px;
+                gap: 0;
+                align-items: flex-start;
+                margin: 0;
+                margin-left: 20px;
+                margin-bottom: 30px;
+            }
+            @media screen and (min-width: 500px) and (max-width: 900px){
                 flex-direction: column;
                 width: 450px;
                 gap: 0;
@@ -75,6 +95,9 @@
         transition: all .4s ease-out 0s;
         transform: scale(1);
         width: 85%;
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            width: 80%;
+        }
        }
        img:hover{
         transition:0.4s all  ease-in-out ;
@@ -116,6 +139,9 @@
         margin-top: 0;
         width: 450px;
     }
+    @media screen and (min-width: 500px) and (max-width: 900px){
+        width: 690px;
+    }
     
     .reseaux-sociaux{
         margin: 0 auto;
@@ -128,6 +154,9 @@
         width: 450px;
         margin-left: 8px;
     }
+    @media screen and (min-width: 500px) and (max-width: 900px){
+        margin: 10px;
+    }
         .fans{
             border-radius: 5px;
             border: 1px solid rgba(0, 0, 0, 0.068);
@@ -138,7 +167,9 @@
             @media screen and (max-width:500px){
                width: 200px;
             }
-           
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 320px;
+            }
         }
     }
 }
