--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -9,6 +9,11 @@
         flex-direction: column;
       margin-left: 20px;
     }
+    @media screen and (min-width: 500px) and (max-width: 900px) {
+       flex-direction: column;
+       width: 690px;
+            
+            }
     
 }
 main{
@@ -29,6 +34,11 @@ h1:hover{
     @media screen and (max-width:500px) {
         width: 450px;
      }
+     @media screen and (min-width: 500px) and (max-width: 900px) {
+        flex-direction: column;
+        width: 650px;
+             
+             }
 }
 .business-article{
     margin-bottom: 30px;
@@ -38,6 +48,11 @@ h1:hover{
            
             width: 450px;
          }
+         @media screen and (min-width: 500px) and (max-width: 900px) {
+            flex-direction: column;
+            width: 650px;
+                 
+                 }
 
     }
     
@@ -102,6 +117,17 @@ h1:hover{
         display: flex;
        flex-direction: column;
         gap: 2em;
+        @media screen and (max-width:500px) {
+           flex-direction: row;
+
+
+    }
+        @media screen and (min-width: 500px) and (max-width: 900px) {
+            flex-direction: row;
+            gap: 0;
+            width: 690px;
+                 
+                 }
         img{
             width: 90%;
             border-radius: 5px;
@@ -128,8 +154,20 @@ h1:hover{
             right: 60%;
 
     }
+    @media screen and (min-width: 500px) and (max-width: 900px) {
+        flex-direction: column;
+        width: 320px;
+        top: 65%;
+        right: 0;
+             }
            h1{
             font-size: 15px;
+            @media screen and (min-width: 500px) and (max-width: 900px) {
+                width: 80%;
+                font-size: 20px;
+               
+                     
+                     }
             
            }
            a{
@@ -166,8 +204,13 @@ h1:hover{
             width: 450px;
             height: 98%;
 
-
     }
+    @media screen and (min-width: 500px) and (max-width: 900px) {
+        width: 310px;
+        height: 98%;
+
+
+}
     }
     .tech{
         height: 40%;
@@ -181,14 +224,26 @@ h1:hover{
            @media screen and (max-width:500px) {
             width: 450px;
             top: 50%;
-            right: 60%;
+            right: 60%;}
+            @media screen and(max-width:900px) {
+                flex-direction: column;
+                width: 320px;
+                top: 20%;
+                right: 0;
+                     }
 
 
-    }
+    
            h1{
             margin-top: 35px;
             font-weight: bold;
             font-size: 15px;
+            @media screen and (min-width: 500px) and (max-width: 900px) {
+                width: 80%;
+                font-size: 20px;
+               
+                     
+                     }
            }
            a{
             color: white;
@@ -220,6 +275,7 @@ h1:hover{
             height: 100px;
           
           }
+         
 
 
         .card-summer-image img{
@@ -230,6 +286,10 @@ h1:hover{
                 margin-left: 15px;
                 margin-top: 40px;
               }
+              @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 550px;
+                margin-right: 10px;
+             }
         }
     }
     
@@ -240,13 +300,22 @@ h1:hover{
         display: grid;
       grid-template-columns: repeat(8,1fr);
         gap: 1em;
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            width: 690px;
+            display: flex;
+            flex-direction: column;
+        }
         .contour-whats-new{
             height: 78%;
             background: white;
+            @media screen and (min-width: 500px) and (max-width: 900px){
+               
+            }
             .whts-new-image img{
                 @media screen and (max-width:500px){
                     width: 455px;
                 }
+               
 
             }
             @media screen and (max-width:500px){
@@ -255,6 +324,12 @@ h1:hover{
               margin-right: 20px;
               width: 450px;
             }
+            .whts-new-image img{
+                @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 690px;
+                margin-top: 60px;
+            }
+           }
            
             
         }
@@ -287,9 +362,11 @@ h1:hover{
                 @media screen and (max-width:500px) {
                   width: 450px;
                   margin-left: 20px;
-                  
         
-        
+            }
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 690px;
+                
             }
                 
                 .reseaux-sociaux{
@@ -300,9 +377,10 @@ h1:hover{
                    gap: 1em;
                    @media screen and (max-width:500px) {
                  align-items: center;
-                  
         
-        
+            }
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                margin: 10px;
             }
                     .fans{
                         border-radius: 5px;
@@ -316,6 +394,9 @@ h1:hover{
                           
                 
                 
+                    }
+                    @media screen and (min-width: 500px) and (max-width: 900px){
+                        width: 320px;
                     }
                        
                     }
@@ -334,6 +415,9 @@ h1:hover{
                     width: 450px;
                     margin-left: 20px;
               }
+              @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 690px;
+              }
                 .most-Recent{
                     
                     margin: 0 auto;
@@ -341,6 +425,9 @@ h1:hover{
                     @media screen and (max-width:500px) {
                         margin-left: 10px;
                         
+                  }
+                  @media screen and (min-width: 500px) and (max-width: 900px){
+                    width: 600px;
                   }
                     .vogue::before{
                         content: '';
@@ -354,6 +441,9 @@ h1:hover{
                         @media screen and (max-width:500px) {
                             width: 400px;
                             
+                      }
+                      @media screen and (min-width: 500px) and (max-width: 900px){
+                        height: 99%;
                       }
 
                     }
@@ -438,6 +528,11 @@ h1:hover{
                 align-items: flex-start;
                 margin-bottom: 30px;
             }
+            @media screen and (max-width:900px){
+                flex-direction: column;
+                align-items: flex-start;
+                margin-bottom: 30px;
+            }
             .lifestyle-menu{
                display: flex;
                gap: 1.5em;
@@ -459,11 +554,23 @@ h1:hover{
         grid-template-columns: repeat(2,1fr);
         gap: 2em;
         width: 700px;
+        @media screen and (max-width:900px){
+            grid-template-columns: repeat(1,1fr);
+        }
+        .responsive{
+            @media screen and (max-width:900px){
+              display: grid;
+              grid-template-columns: repeat(4,1fr);
+            }
+        }
         .whats-news-détails{
             img{
                 @media screen and (max-width:500px){
                    width: 400px;
                     
+                }
+                @media screen and (max-width:900px){
+                    width: 600px;
                 }
             }
            span{
@@ -475,6 +582,9 @@ h1:hover{
                 @media screen and (max-width:500px){
                     width: 70%;
                     
+                }
+                @media screen and (max-width:900px){
+                    width: 600px;
                 }
             }
             @media screen and (max-width:500px){
@@ -511,12 +621,16 @@ h1:hover{
                     width: 60%;
     
                 }
+                @media screen and (max-width:900px){
+                    width: 200px;
+                }
              }
-             a:nth-of-type(1){
+             a:nth-child(1){
                color:#0077b5;
                 
                 font-size: 12px;
              }
+            
 
              a{
                 font-size: 12px;
@@ -538,6 +652,7 @@ h1:hover{
                 
                  font-size: 12px;
               }
+             
 
         }
        
@@ -550,6 +665,9 @@ h1:hover{
                 display: none;
 
             }
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                display: none;
+            }
             
         }
         margin-top: 50px;
@@ -560,6 +678,9 @@ h1:hover{
             @media screen and (max-width:500px){
                 display: none;
 
+            }
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                display: none;
             }
         }
         .most-popular-détails:nth-of-type(2){
@@ -585,6 +706,9 @@ h1:hover{
                     h2{
                         font-size: 15px;
                         width: 50%;
+                        @media screen and (min-width: 500px) and (max-width: 900px){
+                            width: 280px;
+                        }
                     }
                 }
                 p{
@@ -607,6 +731,11 @@ h1:hover{
 
  
              }
+             @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 690px;
+               margin-left: 8%;
+               height: 370px;
+             }
 
             
             display: flex;
@@ -620,6 +749,9 @@ h1:hover{
 
  
              }
+             @media screen and (min-width: 500px) and (max-width: 900px){
+                padding-left: 50px;
+             }
            
             .most-popular-détails img{
                 width: 90%;
@@ -627,10 +759,12 @@ h1:hover{
                         width: 380px;
                         height:249px ;
                         border-radius: 8px;
-         
-                   
-
                 }
+                @media screen and (min-width: 500px) and (max-width: 900px){
+                    width: 260px;
+                    border-radius: 8px;
+                }
+               
             }
             .most-popular-détails{
                 height: 300px;
@@ -643,7 +777,9 @@ h1:hover{
                 @media screen and (max-width:500px){
                   margin-left: 5px;
     
-     
+                 }
+                 @media screen and (min-width: 500px) and (max-width: 900px){
+                    margin-left: 20px;
                  }
             }
         }
@@ -659,9 +795,15 @@ h1:hover{
             align-items: center;
             gap: 1em;
         margin-top: 5%;
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            display: none;
+         }
         @media screen and (max-width:500px){
            width: 450px;
            margin-left: 15px;
+           @media screen and (min-width: 500px) and (max-width: 900px){
+            width: 500px;
+         }
            .bloc-1{
             position: relative;
            
@@ -672,6 +814,7 @@ h1:hover{
                 position: absolute;
                 top: 55%;
                 right: 20%;
+               
             
                     h1{
                         padding-top: 5px;
@@ -703,6 +846,7 @@ h1:hover{
                 display: none;
 
             }
+           
         }
 
        
@@ -714,9 +858,15 @@ h1:hover{
             img{
                 width: 350px;
             }
+            .bloc-1:nth-of-type(1){
+                @media screen and (min-width: 500px) and (max-width: 900px){
+                    display: none;
+                }
+            }
             
             .bloc-1{
                 position: relative;
+                
                
                 .blog-content{
                     padding: 15px ;
@@ -725,6 +875,7 @@ h1:hover{
                     position: absolute;
                     top: 55%;
                     right: 20%;
+                  
                 
                         h1{
                             padding-top: 5px;
