--- a/css/pages/_latestnews.scss
+++ b/css/pages/_latestnews.scss
@@ -6,11 +6,17 @@
     @media screen and (max-width:500px){
         flex-direction: column;
     }
+    @media screen and (min-width: 500px) and (max-width: 900px){
+        flex-direction: column;
+    }
 
     .music-events img{
         width: 270px;
             @media screen and (max-width:500px){
                 display: none;
+        }
+        @media screen and (min-width: 500px) and (max-width: 900px){
+           display: none;
         }
     }
     .last-new-content{
@@ -18,11 +24,18 @@
         @media screen and (max-width:500px){
             margin-left: 30px;
         }
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            margin-left: 90px;
+        }
         img{
             @media screen and (max-width:500px){
                 width: 440px;
                 height: 241px;
                 border-radius: 7px;
+            }
+            @media screen and (min-width: 500px) and (max-width: 900px){
+                width: 690px;
+               
             }
         }
         h1{
@@ -59,7 +72,17 @@
             font-weight: bold;
             
         }
+        @media screen and (min-width: 500px) and (max-width: 900px){
+            margin-left: 70px;
+        }
         
         
+    
+}
+.conture-reseaux-sociaux{
+    @media screen and (min-width: 500px) and (max-width: 900px){
+        margin-right: 30%;
+     
+    }
     
 }
